@@ -151,11 +151,13 @@ txt_autopilot_change_note_step_2="Please move the contents of the current autopi
 
 # Basic backup
 txt_basicbackup_header="Basic Backup jobs"
+txt_basicbackup_title_view_script="View AutoPilot script file for this basic backup job"
 txt_basicbackup_package_name="Package name"
 txt_basicbackup_job_name="Job name"
 
 # Hyper Backup
 txt_hyperbackup_header="Hyper Backup Tasks"
+txt_hyperbackup_title_view_script="View AutoPilot script file for this Hyper Backup task"
 txt_hyperbackup_package_name="Package name"
 txt_hyperbackup_job_name="Job name"
 
@@ -216,6 +218,7 @@ txt_help_setup_step_2="From the second line onwards, individual shell script ins
 txt_help_setup_step_3="After the shell script instruction has been executed, a so-called exit code is usually passed to the system, the numerical value of which is given via a"
 txt_help_setup_step_4="can be read. If the result is 0, the last executed shell script instruction was executed without errors. In this case, AutoPilot would automatically eject the external disk. However, if you get a numerical value between 1 and 255, this indicates a note, a warning, an error or an abort of the last executed shell script statement. In this case, the external storage medium would not be automatically ejected by AutoPilot. This basic behavior can be individually adjusted in the AutoPilot settings. Alternatively, instead of the exit code passed by the system, this can also be done an own and thus permanently set exit code can be passed to AutoPilot, whereby a "
 txt_help_setup_step_5="AutoPilot informs that, regardless of the exit code actually passed, the external disk is always ejected. Below is the complete example script."
+
 
 
 
