@@ -151,11 +151,13 @@ txt_autopilot_change_note_step_2="Verschiebe daher bitte den Inhalt der aktuelle
 
 # Basic Backup
 txt_basicbackup_header="Basic Backup Aufträge"
+txt_basicbackup_title_view_script="AutoPilot Scriptdatei für diesen Basic Backup Auftrag ansehen"
 txt_basicbackup_package_name="Paketname"
 txt_basicbackup_job_name="Auftragsname"
 
 # Hyper Backup
 txt_hyperbackup_header="Hyper Backup Aufgaben"
+txt_hyperbackup_title_view_script="AutoPilot Scriptdatei für diese Hyper Backup Aufgabe ansehen"
 txt_hyperbackup_package_name="Paketname"
 txt_hyperbackup_job_name="Auftragsname"
 
@@ -216,5 +218,6 @@ txt_help_setup_step_2="Ab der zweiten Zeile folgen individuelle Shellscript Anwe
 txt_help_setup_step_3="Nachdem die Shellscript Anweisung ausgeführt wurde, wird in der Regel ein sogenannter Exit-Code an das System übergeben, dessen Zahlenwert über ein"
 txt_help_setup_step_4="ausgelesen werden kann. Ist das Ergebnis 0, wurde die zuletzt ausgeführte Shellscript Anweisung fehlerfrei ausgeführt. AutoPilot würde in diesem Fall den externen Datenträger automatisch auszuwerfen. Erhält man hingegen einen Zahlenwert zwischen 1 und 255 deutet dies auf einen Hinweis, eine Warnung, einen Fehler oder einen Abbruch der zuletzt ausgeführten Shellscript Anweisung hin. In diesem Fall würde der externe Datenträger von AutoPilot nicht automatisch ausgeworfen. Dieses grundlegende Verhalten kann in den AutoPilot Einstellungen individuell angepasst werden. Alternativ dazu kann anstelle des vom System übergebenen Exit-Code, auch ein eigener und damit fest eingestellter Exit-Code an AutoPilot übergeben werden, wobei ein"
 txt_help_setup_step_5="AutoPilot mitteilt, das unabhängig vom tatsächlich übergebenen Exit-Code, der externe Datenträger immer ausgeworfen wird. Nachfolgend nochmal das komplette Beispiel-Script."
+
 
 
